--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,12 +30,70 @@ jobs:
             - name: make build/quantize from llama.cpp sources
               env:
                   CMAKE_ARGS: "-DLLAMA_FATAL_WARNINGS=ON -DLLAMA_METAL_EMBED_LIBRARY=ON"
-              run: make build/quantize
+              run: make quantize
 
             - name: file info
-              run: file build/quantize
+              run: file build/quantize*
 
             - uses: actions/upload-artifact@v4
               with:
-                  name: "quantize-macos"
-                  path: build/quantize
+                  name: "quantize-macos-arm64"
+                  path: build/quantize*
+
+    linux-build:
+        name: "Build quantize on Linux for ${{ matrix.arch }}"
+        runs-on: "ubuntu-latest"
+        strategy:
+            fail-fast: true
+            matrix:
+                arch:
+                    - "amd64"
+                    - "arm64"
+                    # - "ppc64le"
+                    # - "s390x"
+                image:
+                    - registry.access.redhat.com/ubi9/python-312
+        steps:
+            - uses: "actions/checkout@v4"
+              with:
+                  submodules: true
+
+            - name: Set up QEMU
+              uses: docker/setup-qemu-action@v3
+
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
+            - name: Pull ${{ matrix.image }} for linux/${{ matrix.arch }}
+              run: |
+                  docker pull --platform linux/${{ matrix.arch }} ${{ matrix.image }}
+
+            - name: make build/quantize from llama.cpp sources
+              run: |
+                set -e
+                docker run --platform linux/${{ matrix.arch }} ${{ matrix.image }} uname -a
+                docker run --platform linux/${{ matrix.arch }} \
+                      -v .:/opt/app-root/src \
+                      -e CMAKE_ARGS="-DLLAMA_FATAL_WARNINGS=ON" \
+                      ${{ matrix.image }} \
+                      make quantize
+
+            - name: file info
+              run: file build/quantize*
+
+            - uses: actions/upload-artifact@v4
+              with:
+                  name: "quantize-linux-${{ matrix.arch }}"
+                  path: build/quantize*
+
+    merge-artifacts:
+        name: Merge artifacts
+        runs-on: ubuntu-latest
+        needs:
+            - macos-build
+            - linux-build
+        steps:
+            - name: Merge artifacts
+              uses: actions/upload-artifact/merge@v4
+              with:
+                  name: quantize
